test/fail/3/Solution.java
public class Solution {

  public int main(int a, int b) {
    return a - b;
  }

}
